# llama_cpp_file_bridge

./: README.md  main.py  requirements.txt
clang-llm-client/: .gitignore  CMakeLists.txt  README.md
clang-llm-client/include/clangllm/: ClangdAnalyzer.hpp  CompilationDatabase.hpp  LlmClient.hpp  LspClient.hpp  Prompt.hpp  SourceStore.hpp  Types.hpp  Uri.hpp
clang-llm-client/src/: ClangdAnalyzer.cpp  CompilationDatabase.cpp  LlmClient.cpp  LspClient.cpp  Prompt.cpp  SourceStore.cpp  Uri.cpp  main.cpp
